--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,40 +10,48 @@
         android:id="@+id/button"
         android:layout_width="240dp"
         android:layout_height="75dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="109dp"
         android:text="LOG IN"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="464dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="240dp"
         android:layout_height="75dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="84dp"
         android:text="SIGN UP"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="572dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="338dp"
         android:layout_height="154dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="81dp"
         android:gravity="center"
         android:text="Sports Club\nBooking System"
         android:textColor="#FF5722"
         android:textSize="44sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="60dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="293dp"
         android:layout_height="85dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="WELCOME"
         android:textSize="34sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="246dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
