--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,10 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/listview"
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:layout_marginTop="100dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="202dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
-
-
+        android:id="@+id/recyclerview"
+        />
 </LinearLayout>
