--- a/app/src/main/res/layout/activity_booking_form.xml
+++ b/app/src/main/res/layout/activity_booking_form.xml
@@ -85,11 +85,12 @@
         android:id="@+id/comment"
         android:layout_width="320dp"
         android:layout_height="216dp"
+        android:layout_marginTop="26dp"
         android:text="User and Club Detials"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="114dp" />
+        app:layout_constraintTop_toBottomOf="@+id/detials" />
 
     <Button
         android:id="@+id/verifyBooking"
