--- a/app/src/main/res/layout/activity_club_details.xml
+++ b/app/src/main/res/layout/activity_club_details.xml
@@ -100,6 +100,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@+id/detials"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/club2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
