--- a/app/src/main/res/layout/activity_booking_form.xml
+++ b/app/src/main/res/layout/activity_booking_form.xml
@@ -52,6 +52,7 @@
         android:layout_marginTop="30dp"
         android:hint="No of people"
         app:endIconMode="clear_text"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BookingTimeLayout"
@@ -61,6 +62,7 @@
             android:id="@+id/BookingPeople"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:text="0"
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
