--- a/app/src/main/res/layout/row2.xml
+++ b/app/src/main/res/layout/row2.xml
@@ -57,13 +57,25 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/datetime"
-            android:layout_width="match_parent"
+            android:id="@+id/date"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/clubsport"
             android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
-            android:text="Booking Date and time"
+            android:text="Booking Date"
+            android:textColor="#a9a9a9"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/clubsport"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/clubsport"
+            android:text="Booking time"
             android:textColor="#a9a9a9"
             android:textSize="18sp" />
 
@@ -71,7 +83,7 @@
             android:id="@+id/count"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/datetime"
+            android:layout_below="@id/date"
             android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
             android:text="People count"
@@ -82,7 +94,7 @@
             android:id="@+id/cost"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/datetime"
+            android:layout_below="@+id/date"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/clubsport"
